# Tarea_4_Paradigmas

./: CMakeLists.txt  README.md
Tarea4/: CMakeLists.txt  config.ini  main.c
Tarea4/Client/: balls_data.h  brickmatriz_data.h  bricks_data.h  client.c  client.h  data.h  end_data.h  partie.h  parties_data.h  player_data.h  register_data.h  ui_data.h
Tarea4/Components/: ball.h  brick.h  brick_array.h  brick_factory.h  player.h  power_type.h  timer.h
Tarea4/Config/: Config.c  Config.h  config.c  config.h
src/: Main.java  config.ini
src/Bloques/: AbstractBloque.java  Bloque.java  ConcreteBloqueMasBolas.java  ConcreteBloqueMasVelocidad.java  ConcreteBloqueMasVidas.java  ConcreteBloqueMenosVelocidad.java  ConcreteBloqueNormal.java  ConcreteRaquetaDoble.java  ConcreteRaquetaMitad.java
src/Fabrica_Bloques/: AbstractBloqueFactory.java  ConcreteBloqueFactory.java
src/Game/: Ball.java  Partida.java  Partie_Without_Elements.java
src/Observer/: Observable.java  Observer.java
src/Server/: ClientHandler.java  ClientInfo.java  Data.java  Parties_Data.java  Party_Choice_Data.java  Register_Data.java  Server.java
src/Server/Client/: ClientHandler.java  ClientInfo.java  ClientRegistration.java
src/Server/Comunication_Data/: Balls_Data.java  Bricks_Data.java  Data.java  Game_end_Data.java  Matrix_Brick_Data.java  Parties_Data.java  Party_Choice_Data.java  Player_Data.java  Register_Data.java  Score_Level_Data.java  Stats_Data.java
src/Server/Connection/: ConnectionManager.java
src/Server/Messaging/: MessageHandler.java  MessageSender.java
